--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Feb 26 01:12:09 IST 2023
-sdk.dir=C\:\\Users\\Dell\\AppData\\Local\\Android\\Sdk
+#Sun Mar 12 20:08:14 IST 2023
+sdk.dir=C\:\\Users\\yeola\\AppData\\Local\\Android\\Sdk
